Updates for all of the Softpedia links at http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -115,7 +115,7 @@
     <tr id="Softpedia" class="link_tr">
       <td class="link_logo_td"><a href="http://linux.softpedia.com/get/Science/relax-22351.shtml"><img src="images/softpedia_logo4a.gif" alt="Softpedia logo" class="image"/></a></td>
       <td>Softpedia is the encyclopedia of free software downloads.</td>
-      <td>The relax page on Softpedia is <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">http://linux.softpedia.com/get/Science/relax-22351.shtml</a>.  The relax developers pages are:  <a href="http://linux.softpedia.com/developer/Edward-d-039-Auvergne-5136.html">Edward d&#39;Auvergne</a>.</td>
+      <td>Softpedia has pages for <a href="http://linux.softpedia.com/get/Science/relax-22351.shtml">GNU/Linux</a>, <a href="http://www.softpedia.com/get/Science-CAD/relax-project.shtml">MS Windows</a>, and <a href="http://mac.softpedia.com/get/Math-Scientific/Edward-relax.shtml">Mac OS X</a>..</td>
     </tr>
 
     <tr id="Prolinux" class="link_tr">
