--- a/links.html
+++ b/links.html
@@ -41,7 +41,7 @@
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
       <li><a href="links.html#Open_source_software_directory">Open Source Software Directory</a></li>
       <li><a href="links.html#archive_is">archive.is</a></li>
-      <li><a href="links.html#Ohloh">Ohloh</a></li>
+      <li><a href="links.html#OpenHUB">OpenHUB</a></li>
      </ul>
     </li>
     <li><a href="links.html#Protein_dynamics">Protein dynamics</a>
@@ -139,10 +139,10 @@
 
 <table cellpadding="5">
   <tbody>
-    <tr id="Ohloh" class="link_tr">
-      <td class="link_logo_td"><script type="text/javascript" src="http://www.ohloh.net/p/633408/widgets/project_basic_stats.js"></script></td>
-      <td>Ohloh is a free, public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
-      <td>The relax project page is <a href="https://www.ohloh.net/p/nmr-relax">https://www.ohloh.net/p/nmr-relax</a>.  The relax developers pages are:<br/>  <a href='https://www.ohloh.net/accounts/239062?ref=Detailed' target='_top'><img alt="Ohloh profile for Edward d'Auvergne" border='0' height='35' src='https://www.ohloh.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
+    <tr id="OpenHUB" class="link_tr">
+      <td class="link_logo_td"><script type="text/javascript" src="http://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
+      <td>OpenHUB, previously known as Ohloh, is a free public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
+      <td>The relax project page is <a href="https://www.openhub.net/p/nmr-relax">https://www.openhub.net/p/nmr-relax</a>.  The relax developers pages are:<br/>  <a href='https://www.openhub.net/accounts/239062?ref=Detailed' target='_top'><img alt="OpenHUB profile for Edward d'Auvergne" border='0' height='35' src='https://www.openhub.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
     </tr>
   </tbody>
 </table>
