Small expansion and editing of the http://www.nmr-relax.com/download_request.html webpage.

--- a/download_request.html
+++ b/download_request.html
@@ -27,7 +27,11 @@
   <div class="main_box">
     <h1>relax download request</h1>
 
-    <p>The file you have tried to access is no longer located on the Gna! servers.  The file was removed from the server to conserve space on the open source infrastructure, but backups still exist.  If you would like a copy of an old distribution release and its signature file, please make a request on the <a href="communication.html#relax-users">relax users mailing list</a>.  Note that the source code for all release releases can be checked out from the relax source code repository at any time.</p>
+    <p>The file you have tried to access is no longer located on the Gna! servers.  It was removed from the server to conserve space on the open source infrastructure, however backups still exist.  If you would like a copy of an old distribution release and its signature file, please make a request on the <a href="communication.html#relax-users">relax users mailing list</a>.</p>
+
+    <p>Note that the source code for all releases can be checked out from the relax source code repository at any time.  For example to obtain the full sources for relax 1.0.0, type:</p>
+
+    <p><em>> svn co http://svn.gna.org/svn/relax/tags/1.0.0</em></p>
 
   </div>
 </div>
