Fix for the 64-bit Linux distribution file md5sum placement.
This is for http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -152,8 +152,8 @@
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small></small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a>a5b50fdd93b06e42a3adb7fa92aff2fb</td>
+      <td><tt><small>a5b50fdd93b06e42a3adb7fa92aff2fb</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td align="right">89,159,888</td>
     </tr>
   </tbody>
@@ -385,8 +385,8 @@
     </tr>
     <tr>
       <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2" title="relax">relax-3.3.2.GNU-Linux.x86_64.tar.bz2</a></td>
-      <td><tt><small></small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a>a5b50fdd93b06e42a3adb7fa92aff2fb</td>
+      <td><tt><small>a5b50fdd93b06e42a3adb7fa92aff2fb</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-3.3.2.GNU-Linux.x86_64.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td align="right">89,159,888</td>
     </tr>
     <tr>
