Updated the relax user manual HTML documentation for the align_tensor user function changes.
This is for http://www.nmr-relax.com/manual/align_tensor_matrix_angles.html and
http://www.nmr-relax.com/manual/align_tensor_svd.html.  The pages are being updated as a test of the
new text.

--- a/manual/align_tensor_matrix_angles.html
+++ b/manual/align_tensor_matrix_angles.html
@@ -112,7 +112,7 @@ Synopsis</A>
 </H3>
 
 <P>
-Calculate the 5D angles<A NAME="30759"></A> between all alignment tensors.
+Calculate the angles<A NAME="30759"></A> between all alignment tensors.
 
 <P>
 
@@ -122,7 +122,7 @@ Defaults</A>
 
 <P>
 <DIV ALIGN="LEFT">
-<SPAN  CLASS="textsf"><SPAN  CLASS="textbf">align_tensor.matrix_angles</SPAN>(basis_set=0, tensors=None)</SPAN>
+<SPAN  CLASS="textsf"><SPAN  CLASS="textbf">align_tensor.matrix_angles</SPAN>(basis_set=`matrix', tensors=None, angle_units=`deg', precision=1)</SPAN>
 
 </DIV>
 
@@ -139,15 +139,110 @@ Keyword arguments</A>
  <SPAN  CLASS="textsf">tensors:</SPAN>  A list of the tensors to apply the calculation to.  If None, all tensors are used.
 
 <P>
+ <SPAN  CLASS="textsf">angle_units:</SPAN>  The units for the angle<A NAME="30771"></A> parameters, either `<TT>deg</TT>' or `<TT>rad</TT>'.
+ 
+<P>
+ <SPAN  CLASS="textsf">precision:</SPAN>  The precision of the printed out angles.<A NAME="30776"></A>  The number corresponds to the number of figures to print after the decimal point.
+
+<P>
 
 <H3><A NAME="SECTION08129400000000000000">
 Description</A>
 </H3>
 
 <P>
-This will calculate the angles<A NAME="30770"></A> between all loaded alignment tensors for the current data pipe.  The matrices are first converted to a 5D vector form and then then angles<A NAME="30771"></A> are calculated.  The angles<A NAME="30772"></A> are dependent on the basis set.  If the basis set is set to the default of 0, the vectors {Sxx, Syy, Sxy, Sxz, Syz} are used.  If the basis set is set to 1, the vectors {Szz, Sxxyy, Sxy, Sxz, Syz} are used instead.
+
+This will calculate the inter-matrix angles<A NAME="30778"></A> between all loaded alignment tensors for the current data pipe.  For the vector basis sets, the matrices are first mapped<A NAME="30779"></A> to vector form and then then the inter-vector angles<A NAME="30780"></A> rather than inter-matrix angles<A NAME="30781"></A> are calculated.  The angles<A NAME="30782"></A> are dependent upon the basis set - linear maps<A NAME="30783"></A> produce identical results whereas non-linear maps<A NAME="30784"></A> result in different angles.<A NAME="30785"></A>  The basis set can be one of:
 
 <P>
+
+<DL>
+<DT><STRONG>`<TT>matrix</TT>' -</STRONG></DT>
+<DD>The standard inter-matrix angles.<A NAME="30788"></A>  This default option is a linear map,<A NAME="30789"></A> hence angles<A NAME="30790"></A> are preserved.  The angle<A NAME="30791"></A> is calculated via the arccos of the Euclidean inner product of the alignment matrices in rank-2, 3D form divided by the Frobenius norm ||A||_F of the matrices.
+  
+</DD>
+<DT><STRONG>`<TT>irreducible 5D</TT>' -</STRONG></DT>
+<DD>The inter-tensor vector angles<A NAME="30793"></A> for the irreducible spherical tensor 5D basis set {A-2, A-1, A0, A1, A2}.  This is a linear map,<A NAME="30794"></A> hence angles<A NAME="30795"></A> are preserved.  These are the spherical harmonic decomposition coefficients.
+  
+</DD>
+<DT><STRONG>`<TT>unitary 9D</TT>' -</STRONG></DT>
+<DD>The inter-tensor vector angles<A NAME="30797"></A> for the unitary 9D basis set {Sxx, Sxy, Sxz, Syx, Syy, Syz, Szx, Szy, Szz}.  This is a linear map,<A NAME="30798"></A> hence angles<A NAME="30799"></A> are preserved.
+  
+</DD>
+<DT><STRONG>`<TT>unitary 5D</TT>' -</STRONG></DT>
+<DD>The inter-tensor vector angles<A NAME="30801"></A> for the unitary 5D basis set {Sxx, Syy, Sxy, Sxz, Syz}.  This is a non-linear map,<A NAME="30802"></A> hence angles<A NAME="30803"></A> are not preserved.
+  
+</DD>
+<DT><STRONG>`<TT>geometric 5D</TT>' -</STRONG></DT>
+<DD>The inter-tensor vector angles<A NAME="30805"></A> for the geometric 5D basis set {Szz, Sxxyy, Sxy, Sxz, Syz}.  This is a non-linear map,<A NAME="30806"></A> hence angles<A NAME="30807"></A> are not preserved.  This is also the Pales standard notation.
+</DD>
+</DL>
+
+<P>
+The full matrix angle<A NAME="30809"></A> via the Euclidean inner product is defined as
+
+<P>
+<PRE>
+                   /   &lt;A1 , A2&gt;   \ 
+    theta = arccos | ------------- | ,
+                   \ ||A1||.||A2|| /
+</PRE>
+
+<P>
+where &lt;a,b&gt; is the Euclidean inner product and ||a|| is the Frobenius norm of the matrix.  For the irreducible spherical tensor 5D basis set, the Am components are defined as
+
+<P>
+<PRE>
+            / 4pi \ 1/2
+       A0 = | --- |     Szz ,
+            \  5  /
+
+                / 8pi \ 1/2
+    A+/-1 = +/- | --- |     (Sxz +/- iSyz) ,
+                \ 15  /
+
+            / 2pi \ 1/2
+    A+/-2 = | --- |     (Sxx - Syy +/- 2iSxy) ,
+            \ 15  /
+</PRE>
+
+<P>
+and, for this complex notation, the angle<A NAME="30814"></A> is
+
+<P>
+<PRE>
+                   / Re(&lt;A1|A2&gt;) \ 
+    theta = arccos | ----------- | ,
+                   \  |A1|.|A2|  /
+</PRE>
+
+<P>
+where the inner product is defined as
+
+<P>
+<PRE>
+               ___
+               \      1    2*
+    &lt;A1|A2&gt; =   &gt;   Am . Am   ,
+               /__
+              m=-2,2
+</PRE>
+
+<P>
+and where Am* = (-1)ˆm A-m, and the norm is defined as |A1| = Re(sqrt(&lt;A1|A1&gt;)).  For all other basis sets whereby the map<A NAME="30820"></A> is real matrix -&gt; real vector, the inter-tensor angle<A NAME="30821"></A> is defined as
+
+<P>
+<PRE>
+                   /  &lt;A1|A2&gt;  \ 
+    theta = arccos | --------- | ,
+                   \ |A1|.|A2| /
+</PRE>
+
+<P>
+where the inner product &lt;A1|A2&gt; is simply the vector dot product and |A1| is the vector length.
+
+<P>
+
 
 <BR>
 
