--- a/manual/align_tensor_svd.html
+++ b/manual/align_tensor_svd.html
@@ -122,7 +122,7 @@ Defaults</A>
 
 <P>
 <DIV ALIGN="LEFT">
-<SPAN  CLASS="textsf"><SPAN  CLASS="textbf">align_tensor.svd</SPAN>(basis_set=0, tensors=None)</SPAN>
+<SPAN  CLASS="textsf"><SPAN  CLASS="textbf">align_tensor.svd</SPAN>(basis_set=`irreducible 5D', tensors=None, precision=4)</SPAN>
 
 </DIV>
 
@@ -139,13 +139,66 @@ Keyword arguments</A>
  <SPAN  CLASS="textsf">tensors:</SPAN>  A list of the tensors to apply the calculation to.  If None, all tensors are used.
 
 <P>
+ <SPAN  CLASS="textsf">precision:</SPAN>  The precision of the printed out singular values and condition numbers.  The number corresponds to the number of figures to print after the decimal point.
+ 
+<P>
 
 <H3><A NAME="SECTION081212400000000000000">
 Description</A>
 </H3>
 
 <P>
-This will perform a singular value decomposition of all tensors loaded for the current data pipe.  If the basis set is set to the default of 0, the matrix on which SVD will be performed is composed of the unitary basis set {Sxx, Syy, Sxy, Sxz, Syz} layed out as:
+This will perform a singular value decomposition for all alignment tensors and calculate the condition number.  The singular values and condition number are dependent on the basis set - linear maps<A NAME="30889"></A> produce identical results whereas non-linear maps<A NAME="30890"></A> result in different values.  The basis set can be one of:
+
+<P>
+<DL>
+<DT><STRONG>`<TT>irreducible 5D</TT>' -</STRONG></DT>
+<DD>The irreducible spherical tensor 5D basis set {A-2, A-1, A0, A1, A2}.  This is a linear map,<A NAME="30893"></A> hence angles,<A NAME="30894"></A> singular values, and condition number are preserved.  These are the spherical harmonic decomposition coefficients.
+  
+</DD>
+<DT><STRONG>`<TT>unitary 9D</TT>' -</STRONG></DT>
+<DD>The unitary 9D basis set {Sxx, Sxy, Sxz, Syx, Syy, Syz, Szx, Szy, Szz}.  This is a linear map,<A NAME="30896"></A> hence angles,<A NAME="30897"></A> singular values, and condition number are preserved.
+  
+</DD>
+<DT><STRONG>`<TT>unitary 5D</TT>' -</STRONG></DT>
+<DD>The unitary 5D basis set {Sxx, Syy, Sxy, Sxz, Syz}.  This is a non-linear map,<A NAME="30899"></A> hence angles,<A NAME="30900"></A> singular values, and condition number are not preserved.
+  
+</DD>
+<DT><STRONG>`<TT>geometric 5D</TT>' -</STRONG></DT>
+<DD>The geometric 5D basis set {Szz, Sxxyy, Sxy, Sxz, Syz}.  This is a non-linear map,<A NAME="30902"></A> hence angles,<A NAME="30903"></A> singular values, and condition number are not preserved.  This is also the Pales standard notation.
+</DD>
+</DL>
+
+<P>
+If the selected basis set is the default of `<TT>irreducible 5D</TT>', the matrix on which SVD will be performed will be:
+
+<P>
+<PRE>
+    | A-2(1) A-1(1) A0(1)  A1(1)  A2(1) |
+    | A-2(2) A-1(2) A0(2)  A1(2)  A2(2) |
+    | A-2(3) A-1(3) A0(3)  A1(3)  A2(3) |
+    |   .      .     .      .      .    |
+    |   .      .     .      .      .    |
+    |   .      .     .      .      .    |
+    | A-2(N) A-1(N) A0(N)  A1(N)  A2(N) |
+</PRE>
+
+<P>
+If the selected basis set is `<TT>unitary 9D</TT>', the matrix on which SVD will be performed will be:
+
+<P>
+<PRE>
+    | Sxx1 Sxy1 Sxz1 Syx1 Syy1 Syz1 Szx1 Szy1 Szz1 |
+    | Sxx2 Sxy2 Sxz2 Syx2 Syy2 Syz2 Szx2 Szy2 Szz2 |
+    | Sxx3 Sxy3 Sxz3 Syx3 Syy3 Syz3 Szx3 Szy3 Szz3 |
+    |  .    .    .    .    .    .    .    .    .   |
+    |  .    .    .    .    .    .    .    .    .   |
+    |  .    .    .    .    .    .    .    .    .   |
+    | SxxN SxyN SxzN SyxN SyyN SyzN SzxN SzyN SzzN |
+</PRE>
+
+<P>
+Otherwise if the selected basis set is `<TT>unitary 5D</TT>', the matrix for SVD is:
 
 <P>
 <PRE>
@@ -159,7 +212,7 @@ This will perform a singular value decomposition of all tensors loaded for the c
 </PRE>
 
 <P>
-If basis_set is set to 1, the geometric basis set consisting of the stretching and skewing parameters Szz and Sxx-yy respectively {Szz, Sxxyy, Sxy, Sxz, Syz} will be used instead.  The matrix is:
+Or if the selected basis set is `<TT>geometric 5D</TT>', the stretching and skewing parameters Szz and Sxx-yy will be used instead and the matrix is:
 
 <P>
 <PRE>
@@ -173,17 +226,33 @@ If basis_set is set to 1, the geometric basis set consisting of the stretching a
 </PRE>
 
 <P>
-The relationships between the geometric and unitary basis sets are:
+For the irreducible spherical tensor basis set, the Am components are defined as
+
+
+<P>
+<PRE>
+            / 4pi \ 1/2
+       A0 = | --- |     Szz ,
+            \  5  /
+
+                / 8pi \ 1/2
+    A+/-1 = +/- | --- |     (Sxz +/- iSyz) ,
+                \ 15  /
+
+            / 2pi \ 1/2
+    A+/-2 = | --- |     (Sxx - Syy +/- 2iSxy) .
+            \ 15  /
+</PRE>
+
+<P>
+The relationships between the geometric and unitary basis sets are
 
 <P>
 <PRE>
     Szz = - Sxx - Syy,
-    Sxxyy = Sxx - Syy,
+    Sxxyy = Sxx - Syy.
 </PRE>
-
-<P>
-The SVD values and condition number are dependent upon the basis set chosen.
-
+ 
 <P>
 
 <BR>
