--- a/features.html
+++ b/features.html
@@ -100,7 +100,7 @@
     <p>The results of an analysis, or any data input into relax, can be visualised using a number of programs:</p>
 
     <ul>
-     <li><a href="http://hugin.ethz.ch/wuthrich/software/molmol/">MOLMOL</a> - 1D data can be mapped onto a structure either by the creation of MOLMOL macros or by direct control of the program.</li>
+     <li><a href="http://sourceforge.net/projects/molmol/">MOLMOL</a> - 1D data can be mapped onto a structure either by the creation of MOLMOL macros or by direct control of the program.</li>
      <li><a href="http://www.pymol.org/">PyMOL</a> - visualisation of diffusion tensors and cone models by using the software as a Python package.</li>
      <li><a href="http://plasma-gate.weizmann.ac.il/Grace">Grace</a> - any 2D data can be plotted.</li>
      <li><a href="http://www.opendx.org">OpenDX</a> - The chi-squared space of models with three parameters can be mapped and 3D images of the space produced.</li>
