Fixes for the http://download.gna.org/relax/ link.
This affects the menu http://www.nmr-relax.com/menu.html used on all the main pages at
http://www.nmr-relax.com.  The http://www.nmr-relax.com/download.html page also required the fix.
The original link was missing the trailing '/' so that a server redirect was required.  This was
found by the W3C link checker (http://validator.w3.org/checklink).

--- a/download.html
+++ b/download.html
@@ -362,7 +362,7 @@
   <div id="All_releases" class="main_box">
     <h1>All releases</h1>
 
-    <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="http://download.gna.org/relax">relax download site</a> or are <a href="download_request.html">available upon request</a>.</p>
+    <p>Descriptions of these releases are available from the <a href='https://gna.org/news/?group=relax'>relax news pages</a>.  These files can either be found on the <a href="http://download.gna.org/relax/">relax download site</a> or are <a href="download_request.html">available upon request</a>.</p>
 
     <div id="series_3.3" class="main_h2">
       <h2>The 3.3 series</h2>
