--- a/menu.html
+++ b/menu.html
@@ -31,7 +31,7 @@
 
   <div class="menu_title">relax @ Gna!</div>
   <div class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></div>
-  <div class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></div>
+  <div class="menu_def"><a href="http://download.gna.org/relax/" title="The Gna! download site for the project relax.">Downloads</a></div>
   <div class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></div>
   <div class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></div>
   <div class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></div>
