Fix for the missing trailing '/' in the http://plasma-gate.weizmann.ac.il/Grace/ link.
This affects http://www.nmr-relax.com/index.html and http://www.nmr-relax.com/features.html.  The
problem was found using the W3C link checker (http://validator.w3.org/checklink).

--- a/features.html
+++ b/features.html
@@ -102,7 +102,7 @@
     <ul>
      <li><a href="http://sourceforge.net/projects/molmol/">MOLMOL</a> - 1D data can be mapped onto a structure either by the creation of MOLMOL macros or by direct control of the program.</li>
      <li><a href="http://www.pymol.org/">PyMOL</a> - visualisation of diffusion tensors and cone models by using the software as a Python package.</li>
-     <li><a href="http://plasma-gate.weizmann.ac.il/Grace">Grace</a> - any 2D data can be plotted.</li>
+     <li><a href="http://plasma-gate.weizmann.ac.il/Grace/">Grace</a> - any 2D data can be plotted.</li>
      <li><a href="http://www.opendx.org">OpenDX</a> - The chi-squared space of models with three parameters can be mapped and 3D images of the space produced.</li>
     </ul>
   </div>
