--- a/links.html
+++ b/links.html
@@ -129,10 +129,10 @@
       <td>On the chemistry and biology page <a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio">http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio</a>.</td>
     </tr>
 
-    <tr id="archive.is" class="link_tr">
-      <td class="link_logo_td"><a href="http://archive.is/www.nmr-relax.com"><img src="images/archive_is.png" alt="archive.is" class="image"/></a></td>
-      <td>The archive.is personal Wayback Machine.</td>
-      <td>The relax pages are archived at <a href="http://archive.is/www.nmr-relax.com">http://archive.is/www.nmr-relax.com</a>.</td>
+    <tr id="archive.today" class="link_tr">
+      <td class="link_logo_td"><a href="http://archive.today/www.nmr-relax.com">archive.today</a></td>
+      <td>The archive.today personal Wayback Machine.</td>
+      <td>The relax pages are archived at <a href="http://archive.today/www.nmr-relax.com">http://archive.today/www.nmr-relax.com</a>.</td>
     </tr>
   </tbody>
 </table>
