Fixes for the menu links for archive.today at http://www.nmr-relax.com/links.html.

--- a/links.html
+++ b/links.html
@@ -40,7 +40,7 @@
       <li><a href="links.html#Softpedia">Softpedia</a></li>
       <li><a href="links.html#Prolinux">Pro-Linux.de</a></li>
       <li><a href="links.html#Open_source_software_directory">Open Source Software Directory</a></li>
-      <li><a href="links.html#archive_is">archive.is</a></li>
+      <li><a href="links.html#archive_today">archive.today</a></li>
       <li><a href="links.html#OpenHUB">OpenHUB</a></li>
      </ul>
     </li>
@@ -129,7 +129,7 @@
       <td>On the chemistry and biology page <a href="http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio">http://www.opensourcesoftwaredirectory.com/Scientific/Chemo-and-bio</a>.</td>
     </tr>
 
-    <tr id="archive.today" class="link_tr">
+    <tr id="archive_today" class="link_tr">
       <td class="link_logo_td"><a href="http://archive.today/www.nmr-relax.com">archive.today</a></td>
       <td>The archive.today personal Wayback Machine.</td>
       <td>The relax pages are archived at <a href="http://archive.today/www.nmr-relax.com">http://archive.today/www.nmr-relax.com</a>.</td>
