--- a/links.html
+++ b/links.html
@@ -140,7 +140,7 @@
 <table cellpadding="5">
   <tbody>
     <tr id="OpenHUB" class="link_tr">
-      <td class="link_logo_td"><script type="text/javascript" src="http://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
+      <td class="link_logo_td"><script type="text/javascript" src="https://www.openhub.net/p/633408/widgets/project_basic_stats.js"></script></td>
       <td>OpenHUB, previously known as Ohloh, is a free public directory of Free and Open Source Software and the contributors who create and maintain it.</td>
       <td>The relax project page is <a href="https://www.openhub.net/p/nmr-relax">https://www.openhub.net/p/nmr-relax</a>.  The relax developers pages are:<br/>  <a href='https://www.openhub.net/accounts/239062?ref=Detailed' target='_top'><img alt="OpenHUB profile for Edward d'Auvergne" border='0' height='35' src='https://www.openhub.net/accounts/239062/widgets/account_detailed.gif' width='230' /></a></td>
     </tr>
