Fix for the NESSY link at http://www.nmr-relax.com/links.html.
The link required a trailing '/' to avoid a redirect.  This was identified by the W3C link checker
(http://validator.w3.org/checklink).

--- a/links.html
+++ b/links.html
@@ -157,7 +157,7 @@
       <td><strong>Description</strong></td>
     </tr>
     <tr id="Nessy" class="link_tr">
-      <td class="link_logo_td"><a href="http://home.gna.org/nessy"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://home.gna.org/nessy/"><img src="images/NESSY.png" alt="NESSY logo" class="image"/></a></td>
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
     </tr>
     <tr id="PDC" class="link_tr">
