Fixes for the http://www.linuxlinks.com links at http://www.nmr-relax.com/links.html.
The 'www' part of the URL is required to avoid a redirect.  This was identified by the W3C link
checker (http://validator.w3.org/checklink).

--- a/links.html
+++ b/links.html
@@ -106,9 +106,9 @@
     </tr>
 
     <tr id="Linuxlinks" class="link_tr">
-      <td class="link_logo_td"><a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://www.linuxlinks.com/Software/Scientific/Biology/Proteins/"><img src="images/linuxlinks_small.png" alt="LinuxLinks logo" class="image"/></a></td>
       <td>LinuxLinks.com, the Linux portal, is a website listing many Linux software projects.</td>
-      <td>On the <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
+      <td>On the <a href="http://www.linuxlinks.com/Software/Scientific/Biology/Proteins/">Software:Scientific:Biology:Proteins</a> page.</td>
     </tr>
 
     <tr id="Softpedia" class="link_tr">
