Replacement of a Bruker link redirect at http://www.nmr-relax.com/links.html.
The original link is now a redirect, so the relax webpage has been updated to match.  This was
identified by the W3C link checker (http://validator.w3.org/checklink).

--- a/links.html
+++ b/links.html
@@ -161,7 +161,7 @@
       <td>NESSY is an open source software to analyse NMR relaxation dispersion data of either CPMG or R1p (R1rho) dispersion experiments.</td>
     </tr>
     <tr id="PDC" class="link_tr">
-      <td class="link_logo_td"><a href="http://www.bruker-biospin.com/software_nmr.html"><img src="images/bruker_logo.png" alt="Bruker logo" class="image"/></a></td>
+      <td class="link_logo_td"><a href="http://www.bruker.com/products/mr/nmr/nmr-software/software.html"><img src="images/bruker_logo.png" alt="Bruker logo" class="image"/></a></td>
       <td>The Bruker Dynamics Center for the processing of R<sub>1</sub>, R<sub>2</sub>, R<sub>1&#961;</sub>, and steady-state NOE data from Bruker NMR spectrometers, as well as other more advanced <a href="https://mail.gna.org/public/relax-users/2012-04/msg00011.html">analyses</a>.</td>
     </tr>
   </tbody>
