Redirect fix for the http://www.python.org links at http://www.nmr-relax.com/.
The 'www' part is required to avoid a redirect.  This was identified by the W3C link checker
(http://validator.w3.org/checklink).

--- a/download.html
+++ b/download.html
@@ -71,9 +71,9 @@
     <div id="Dependencies" class="main_h2">
       <h2>Dependencies</h2>
 
-        <p>Minimally both <a href="http://python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
+        <p>Minimally both <a href="http://www.python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
-        <p>Note that only the official Python distribution from <a href="http://python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
+        <p>Note that only the official Python distribution from <a href="http://www.python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
 
         <h4>wxPython</h4>
 
@@ -99,7 +99,7 @@
                 <td class="dep_td_head"><strong>Download link</strong></td>
               </tr>
               <tr>
-                <td><a href="http://python.org">Python</a></td>
+                <td><a href="http://www.python.org">Python</a></td>
                 <td>&ge; 2.5</td>
                 <td><a href="https://www.python.org/downloads/">Python downloads</a></td>
               </tr>
@@ -235,7 +235,7 @@
       <td class="dep_td_head"><strong>Package</strong></td>
       <td class="dep_td_head"><strong>Version</strong></td>
     </tr>
-    <tr><td><a href="http://python.org">Python</a></td><td>2.7.8</td></tr>
+    <tr><td><a href="http://www.python.org">Python</a></td><td>2.7.8</td></tr>
     <tr><td><a href="http://numpy.scipy.org/">NumPy</a></td><td>1.8.1</td></tr>
     <tr><td><a href="http://www.scipy.org/">SciPy</a></td><td>0.14.0</td></tr>
     <tr><td><a href="https://nose.readthedocs.org/en/latest/">nose</a></td><td>1.3.3</td></tr>
