Updated the Homebrew link at http://www.nmr-relax.com/download.html.
The new link was identified by the W3C link checker (http://validator.w3.org/checklink).

--- a/download.html
+++ b/download.html
@@ -203,7 +203,7 @@
 <!-- Mac OS X -->
     <div id="Mac_OS_X" class="main_h2">
       <h2>Mac OS X</h2>
-        <p>There are 3 ways of installing relax on a Mac.  These are using the pre-compiled relax application, Fink or the <a href="download.html#Source_code_release">source releases</a>.  If you are a fan of the <a href="http://mxcl.github.com/homebrew/">Homebrew</a> project, please read this <a href="http://thread.gmane.org/gmane.science.nmr.relax.user/1365">detailed explanation</a> for how to set up relax using the source release.</p>
+        <p>There are 3 ways of installing relax on a Mac.  These are using the pre-compiled relax application, Fink or the <a href="download.html#Source_code_release">source releases</a>.  If you are a fan of the <a href="http://brew.sh/">Homebrew</a> project, please read this <a href="http://thread.gmane.org/gmane.science.nmr.relax.user/1365">detailed explanation</a> for how to set up relax using the source release.</p>
 
         <h3 id="Mac_app">Stand-alone application</h3>
 
