--- a/download.html
+++ b/download.html
@@ -71,7 +71,7 @@
     <div id="Dependencies" class="main_h2">
       <h2>Dependencies</h2>
 
-        <p>Minimally both <a href="http://www.python.org">Python</a> and <a href="http://numpy.scipy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
+        <p>Minimally both <a href="http://www.python.org">Python</a> and <a href="http://www.numpy.org/">NumPy</a> need to be installed on the system for relax to run.  A few other Python packages are optional and, although certain features may be missing, relax will operate without these.  Additional Python packages may be required on specific operating systems.</p>
 
         <p>Note that only the official Python distribution from <a href="http://www.python.org">python.org</a> is supported.  If you use the Enthought Python Distribution (EPD) or other non-official distributions you may encounter problems with the relax C modules, the graphical user interface, or other issues.  These alternative distributions are to be used at your own risk and any bugs encountered will not be considered as relax bugs.</p>
 
@@ -104,7 +104,7 @@
                 <td><a href="https://www.python.org/downloads/">Python downloads</a></td>
               </tr>
               <tr>
-                <td><a href="http://numpy.scipy.org/">NumPy</a></td>
+                <td><a href="http://www.numpy.org/">NumPy</a></td>
                 <td>&ge; 1.6</td>
                 <td><a  href="http://sourceforge.net/projects/numpy/files/NumPy/">NumPy downloads</a></td>
               </tr>
@@ -236,7 +236,7 @@
       <td class="dep_td_head"><strong>Version</strong></td>
     </tr>
     <tr><td><a href="http://www.python.org">Python</a></td><td>2.7.8</td></tr>
-    <tr><td><a href="http://numpy.scipy.org/">NumPy</a></td><td>1.8.1</td></tr>
+    <tr><td><a href="http://www.numpy.org/">NumPy</a></td><td>1.8.1</td></tr>
     <tr><td><a href="http://www.scipy.org/">SciPy</a></td><td>0.14.0</td></tr>
     <tr><td><a href="https://nose.readthedocs.org/en/latest/">nose</a></td><td>1.3.3</td></tr>
     <tr><td><a href="http://wxpython.org/">wxPython</a></td><td>2.9.3.1 osx-cocoa (classic)</td></tr>
