Removed an old wxPython link from http://www.nmr-relax.com/download.html.

--- a/download.html
+++ b/download.html
@@ -79,7 +79,7 @@
 
           <p>The relax graphical user interface (GUI) is implemented using <a href="http://www.wxpython.org/">wxPython</a>.  This package is essential if the GUI is to be used.  As wxPython currently does not support Python 3, you will need to use Python 2 to access the GUI.</p>
 
-          <p>When using a 64-bit Mac OS X system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7. One version can be downloaded <a href="http://downloads.sourceforge.net/wxpython/wxPython2.9-osx-2.9.1.1-cocoa-py2.7.dmg">here</a>.</p>
+          <p>When using a 64-bit Mac OS X system, 64-bit compatible wxPython must be used, i.e. a version using the Cocoa API for implementing the GUI. Currently, this is only available for Python 2.7.</p>
 
         <h4>SciPy</h4>
 
