Fix for the http://www.nmr-relax.com/windows_devel.html#MSVS_probs link at http://www.nmr-relax.com/download.html.
This was identified by the W3C link checker (http://validator.w3.org/checklink).

--- a/download.html
+++ b/download.html
@@ -304,7 +304,7 @@
 
           <p><em>> scons</em></p>
 
-          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The Python header or development files also need to be installed.  These files are installed with Python on MS Windows, but needs to be installed as a separate package often called something like python-devel on GNU/Linux and Mac OS X.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSCV_probs">here</a>.</p>
+          <p>in the relax base directory, the modules should automatically compile.  This should work on all operating systems assuming that a C compiler is present.  The Python header or development files also need to be installed.  These files are installed with Python on MS Windows, but needs to be installed as a separate package often called something like python-devel on GNU/Linux and Mac OS X.  If an error occurs on MS Windows, read the instructions <a href="windows_devel.html#MSVS_probs">here</a>.</p>
 
          <h3>Development platforms</h3>
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a> on MS Windows, for compiling the LaTeX manual, and generating relax distribution packages.</p>
