--- a/communication.html
+++ b/communication.html
@@ -163,10 +163,22 @@
       </form>
       <!-- SiteSearch Google -->
 
-      <p>Alternatively all lists can be <a href="http://www.google.com/coop/cse?cx=000230621675959489540%3Aianvteuoucy">searched</a> simultaneously:</p>
+      <p>Alternatively all lists can be <a href="http://www.google.com/cse/home?cx=000230621675959489540%3Aianvteuoucy">searched</a> simultaneously:</p>
 
       <!-- Google gadget -->
-      <script src="http://www.gmodules.com/ig/ifr?url=http://www.google.com/coop/api/000230621675959489540/cse/ianvteuoucy/gadget&amp;synd=open&amp;w=320&amp;h=75&amp;title=All+relax+mailing+lists&amp;border=%23ffffff%7C3px%2C1px+solid+%23999999&amp;output=js" type="text/javascript"></script>
+      <script>
+        (function() {
+          var cx = '000230621675959489540:ianvteuoucy';
+          var gcse = document.createElement('script');
+          gcse.type = 'text/javascript';
+          gcse.async = true;
+          gcse.src = (document.location.protocol == 'https:' ? 'https:' : 'http:') +
+              '//www.google.com/cse/cse.js?cx=' + cx;
+          var s = document.getElementsByTagName('script')[0];
+          s.parentNode.insertBefore(gcse, s);
+        })();
+      </script>
+      <gcse:search></gcse:search>
     </div>
 
   </div>
