Converted the "Development platform setup" menu entry into a collapsible entry.
This is for all pages at http://www.nmr-relax.com.

--- a/menu.html
+++ b/menu.html
@@ -4,26 +4,27 @@
   <div class="menu_title">relax</div>
   <div class="menu_def"><a href="http://www.nmr-relax.com" title="Go to the relax home page">Main page</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/features.html" title="A listing of relax's features">Features</a></div>
-
   <div class="menu_def_collapsable" onclick="collapseMenu('analysis_submenu')">Supported analyses</div>
     <div id="analysis_submenu" class="submenu">
       <a class="submenu_def" href="http://www.nmr-relax.com/analyses/relaxation_dispersion.html">Relaxation dispersion</a>
     </div>
-
   <div class="menu_def"><a href="http://www.nmr-relax.com/screenshots.html" title="relax UI screenshots">Screenshots</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/docs.html" title="The internal help system, sample scripts, and the relax manual">Documentation</a></div>
-
   <div class="menu_def_collapsable" onclick="collapseMenu('manual_submenu')">User manual</div>
     <div id="manual_submenu" class="submenu">
        <a class="submenu_def" href="http://download.gna.org/relax/manual/relax.pdf" title="The relax PDF user manual">PDF user manual</a>
        <a class="submenu_def" href="http://www.nmr-relax.com/manual/index.html" title="The relax HTML user manual (lower quality than the PDF)">HTML user manual</a>
     </div>
-
   <div class="menu_def"><a href="http://www.nmr-relax.com/download.html" title="Instructions for downloading relax">Download</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/communication.html" title="The bug tracker and mailing lists">Mailing lists &amp; trackers</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/api/" title="The relax internals for power users">The relax API documentation</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/faq.html" title="Frequently asked questions (FAQ)">FAQ</a></div>
-  <div class="menu_def"><a href="http://www.nmr-relax.com/devel_platform.html" title="Setting up a development platform">Development platform setup</a></div>
+  <div class="menu_def_collapsable" onclick="collapseMenu('devel_submenu')">Development platform setup</div>
+    <div id="devel_submenu" class="submenu">
+      <a class="submenu_def" href="http://www.nmr-relax.com/devel_platform.html">Overview</a></div>
+      <a class="submenu_def" href="http://www.nmr-relax.com/windows_devel.html">MS Windows</a>
+    </div>
+
   <div class="menu_def"><a href="http://www.nmr-relax.com/events.html" title="The material related to events publicizing relax">Events</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/refs.html" title="References for the program relax">References</a></div>
   <div class="menu_def"><a href="http://www.nmr-relax.com/links.html" title="Where to find relax on the web, and other links">Links</a></div>
