Fix for a dead CTAN link at http://www.nmr-relax.com/windows_devel.html.
This was identified by the W3C link checker (http://validator.w3.org/checklink).

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -326,7 +326,7 @@
 
    <div id="LaTeX_download" class="main_h2">
     <h2>5.2 Download</h2>
-     <p>The <a href="http://www.latex-project.org/">LaTeX</a> distribution for MS Windows is called <a href="http://www.tug.org/protext/">ProTeXt</a>.  This free software can be downloaded from one of the <a href='http://www.tug.org/CTAN.sites'>CTAN mirrors</a> from the directory '<em>CTAN:systems/windows/protext</em>'.</p>
+     <p>The <a href="http://www.latex-project.org/">LaTeX</a> distribution for MS Windows is called <a href="http://www.tug.org/protext/">ProTeXt</a>.  This free software can be downloaded from one of the <a href="http://www.ctan.org/mirrors/">CTAN mirrors</a> from the directory '<em>CTAN:systems/windows/protext</em>'.</p>
 
      <p>For version 1.3 (<em>protext-1.3.exe</em>), the size of the ProTeXt download is 407 Mb.  This file is a WinRAR self-extracting archive.  After installation following the instructions below, the total size of the files on disk is ~880 Mb.</p>
    </div>
