--- a/windows_devel.html
+++ b/windows_devel.html
@@ -147,7 +147,7 @@
 
    <div id="MSVS_download" class="main_h2">
     <h2>2.2 Download</h2>
-     <p>The <a href="http://www.microsoft.com/visualstudio/eng/products/visual-studio-express-products">Express edition of MS Visual Studio</a> is a cost-free download from the Microsoft website.  You will need to choose the version suitable for your operating system.  The download size for MS Visual Studio Express is anywhere between 500 Mb to 2 Gb, depending on the options selected, and can be installed by two methods.  The first is to download and run the installation executable file and then install the Microsoft Platform SDK.  The second method is to download and burn a CD or ISO image containing all the software.  No additional software is required if installing from the CD image.  The following is a list of links for downloading the different files for various MSVS versions, in English, directly from the Microsoft website:</p>
+     <p>The <a href="http://www.visualstudio.com/en-us">Express edition of MS Visual Studio</a> is a cost-free download from the Microsoft website.  You will need to choose the version suitable for your operating system.  The download size for MS Visual Studio Express is anywhere between 500 Mb to 2 Gb, depending on the options selected, and can be installed by two methods.  The first is to download and run the installation executable file and then install the Microsoft Platform SDK.  The second method is to download and burn a CD or ISO image containing all the software.  No additional software is required if installing from the CD image.  The following is a list of links for downloading the different files for various MSVS versions, in English, directly from the Microsoft website:</p>
    </div>
 
 <table cellspacing="10">
